Fix light mode override when OS is in dark mode

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -41,6 +41,10 @@ body {
   background-color: rgba(25, 30, 40, 0.85) !important;
 }
 
+.light #_main {
+  background-color: rgba(255, 255, 255, 0.85) !important;
+}
+
 .dl-table {
   a {
     @supports ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
